[package]
name = "tRustyProbability"
version = "0.1.0"
authors = ["TheFinnishArmy <thefinnisharmy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.9" }
rand = { version = "0.7", features = ["log"] }


